# qsua

./: CMakeLists.txt  Home.qml  HomeForm.ui.qml  Page1.qml  Page1Form.ui.qml  Page2Form.ui.qml  Qsua_de_DE.ts  SipCallDelegate.qml  calllistmodel.cpp  calllistmodel.h  calllogentry.cpp  calllogentry.h  main.cpp  main.qml  pjsuacontext.cpp  pjsuacontext.h  pjsuacore.cpp  pjsuacore.h  qml.qrc  sipaccount.cpp  sipaccount.h  sipcall.cpp  sipcall.h  sipconference.cpp  sipconference.h  siplogwriter.cpp  siplogwriter.h
android/: AndroidManifest.xml
assets/: INFO
